# algoritmika

./: del_fn.py  hero.py  main.py  mapmanager.py  pyproject.toml  test_main.py
